# haskell-pfds

./: .gitignore  LICENSE  README.md  haskell-pfds.cabal
src/: CatenableDeque.hs  CatenableList.hs  Deque.hs  FiniteMap.hs  Heap.hs  LeftistHeap.hs  Queue.hs  RandomAccessList.hs  Set.hs  Sortable.hs  Stack.hs  UnbalancedSet.hs
src/CatenableList/: CatList.hs
src/Deque/: BankersDeque.hs
src/FiniteMap/: Trie.hs  TrieOfTrees.hs
src/Heap/: BinomialHeap.hs  ExplicitMin.hs  LazyPairingHeap.hs  LeftistHeap.hs  PairingHeap.hs  SkewBinomialHeap.hs  SplayHeap.hs
src/Heap/BinomialHeap/: SizedHeap.hs  WithRank.hs
src/Queue/: BankersQueue.hs  BatchedQueue.hs  BootstrappedQueue.hs  HoodMelvilleQueue.hs  PhysicistsQueue.hs
src/RandomAccessList/: AltBinaryRandomAccessList.hs  BinaryRandomAcessList.hs  SkewBinaryRandomAccessList.hs
src/Set/: RedBlackSet.hs  UnbalancedSet.hs
src/Sortable/: BottomUpMergeSort.hs
