name:                haskell-pfds
version:             0.1.0.0
synopsis:            Haskell codes for Purely Functional Data Structures
description:         Please see README.md
homepage:            https://github.com/cbpark/haskell-pfds#readme
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           Copyright (c) 2017 Chan Beom Park
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Queue
                       Queue.BatchedQueue
                       Queue.BankersQueue
                       Queue.PhysicistsQueue
                       Queue.HoodMelvilleQueue
                       Queue.BootstrappedQueue
                       Deque
                       Deque.BankersDeque
                       CatenableList
                       RandomAccessList
                       RandomAccessList.BinaryRandomAcessList
                       RandomAccessList.SkewBinaryRandomAccessList
                       RandomAccessList.AltBinaryRandomAccessList
                       Heap
                       Heap.LeftistHeap
                       Heap.BinomialHeap
                       Heap.BinomialHeap.WithRank
                       Heap.BinomialHeap.SizedHeap
                       Heap.ExplicitMin
                       Heap.SplayHeap
                       Heap.PairingHeap
                       Heap.LazyPairingHeap
                       Heap.SkewBinomialHeap
                       Sortable
                       Sortable.BottomUpMergeSort
                       Set
                       Set.UnbalancedSet
                       Set.RedBlackSet
                       FiniteMap
  other-modules:       Stack
  build-depends:       base >= 4.9
  ghc-options:         -Wall -O2 -funbox-strict-fields
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cbpark/haskell-pfds
